# Complaint-Analysis-For-Financial-Services-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
notebooks/: task1_eda.ipynb  task2_embedding.ipynb  task3_evaluation.ipynb
src/: app.py  loader.py  preprocessor.py  rag_engine.py  sampler.py  vectorizer.py  visualizer.py
test/: conftest.py  test_loader.py  test_preprocessor.py  test_rag_engine.py  test_sampler.py
